[gd_scene load_steps=2 format=3 uid="uid://dityrw4q4sdnn"]

[ext_resource type="Script" uid="uid://t264h4es31br" path="res://scripts/ui/CrewHudPanelUI.gd" id="1_1lrsr"]

[node name="CrewHudPanelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1lrsr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="CrewNameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CrewStatusLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="O2Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HungerLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SleepLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
